--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 # ???? ??? ???!
 server.servlet.encoding.force=true
+server.servlet.encoding.force-response=true
 
 # Oracle ??
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=youtube
 spring.datasource.password=youtube
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+
+# ?? ???? ?? ??
+# ?? ??? ?? ??
+spring.servlet.multipart.enabled=true
+# ???? ??? ?? ??
+spring.servlet.multipart.location=D:\\upload
+# ? ?? ?? ??? ?? ??
+spring.servlet.multipart.max-request-size=50MB
+# ?? ??? ?? ??
+spring.servlet.multipart.max-file-size=20MB
