--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,11 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # ?? ??? ?? ??
 spring.servlet.multipart.enabled=true
 # ???? ??? ?? ??
-spring.servlet.multipart.location=D:\\upload
+spring.servlet.multipart.location=D:\\youtube-frontend\\public\\upload
 # ? ?? ?? ??? ?? ??
 spring.servlet.multipart.max-request-size=50MB
 # ?? ??? ?? ??
 spring.servlet.multipart.max-file-size=20MB
+
+# ???? ?? ??
+youtube.upload.path=D:\\youtube-frontend\\public\\upload
